[package]
name = "coolttviz-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.29", default-features = true }
imgui = "0.8.2"
imgui-winit-support = "0.8.2"
imgui-glium-renderer = "0.8.2"
nalgebra = "0.29.0"
ordered-float = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
